--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <h1>Dan Paulo's Portfolio</h1>
     <h2> I'm a web developer</h2>
 </hr>
-    <a href="./public/movie-ranking.html">My Movie Ranking</a>
+    <a href="./public/movie-ranking.html"><h2>My Movie Ranking</h2></a>
     <br>
     <br>
     <img src="./assets/images/movies.png" alt="movie">
     <br>
     <br>
 </hr>
-    <a href="./public/birthday-invite.html">Birthday Invitation</a>
+    <a href="./public/birthday-invite.html"><h2>Birthday Invitation</h2></a>
     <br>
     <br>
     <img src="./assets/images/bday.png" alt="bday">
 </hr> 
     <br>
     <br>
-    <a href="./public/about.html">About</a> <a href="./public/contact.html">Contact</a>
+    <a href="./public/about.html"><h3>About</h3></a> <a href="./public/contact.html"><h3>Contact</h3>.</a>
 </body>
 </html>
